--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <div class="contact">
       <h1>Contact Me</h1>
       <p>If you would like to get in touch, feel free to contact me via phone or email.</p>
-      <p>Phone: <a href="tel:+8709808570">8709808570</a></p>
-      <p>Email: <a href="mailto:binitpatra870@gmail.com">binitpatra870@gmail.com</a></p>
+      <p>Phone: <a href="tel:+7991188952">7991188952</a></p>
+      <p>Email: <a href="mailto:manishthakur7r1@gmail.com">manishthakur7r1@gmail.com</a></p>
       
     </div>
   </section>
